--- a/JS21-22/package.json
+++ b/JS21-22/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "jshw10",
+  "name": "JS Homework 21-22",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "IS",
+  "license": "___",
   "devDependencies": {
     "babel-preset-es2015": "^6.6.0",
     "gulp": "^3.9.1"
