--- a/FinalExam/package.json
+++ b/FinalExam/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-connect": "^4.0.0",
+    "gulp-imagemin": "^3.0.1",
     "gulp-livereload": "^3.8.1",
-    "gulp-sass": "^2.3.1"
+    "gulp-sass": "^2.3.1",
+    "gulp.spritesmith": "^6.2.1"
   }
 }
